--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.2",
+    "@types/redux-logger": "^3.0.9",
     "framer-motion": "^6.2.6",
     "next": "^12.0.10",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
