--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "test": "jest --watch",
     "test:ci": "jest --ci"
   },
-  "browserslist": [">0.3%", "not ie 11", "not dead", "not op_mini all"],
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@types/redux-logger": "^3.0.9",
+    "browserslist": "^4.19.2",
     "framer-motion": "^6.2.6",
     "next": "^12.0.10",
     "react": "^17.0.2",
