--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.2",
