--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
