--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9",
     "browserslist": "^4.19.3",
     "framer-motion": "^6.2.8",
